--- a/tyba-back/package.json
+++ b/tyba-back/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "accesscontrol": "^2.2.1",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
